# Pdf_Rag

./: .env  README.md  pyproject.toml  rag.py  requirements.txt
