[project]
name = "claude-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.0.350",
    "numpy>=1.21.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "tiktoken>=0.4.0",
    "torch>=1.13.0",
    "transformers>=4.21.0",
]
